--- a/public/style/admin/contact_admin.css
+++ b/public/style/admin/contact_admin.css
@@ -1,17 +1,37 @@
 #container_table table {
     width: 100%;
 }
+table {
+    border-collapse: collapse;
+}
 table tr {
     text-align: center;
-    height: 30px;
-}
-table thead {
-    background-color: #eca03e;
+    height: 40px;
 }
 
-.link {
-    color: white;
-    background-color: green;
-    padding: 5px 10px;
-    border-radius: 10px;
+table thead {
+    background-color: #ff9900a9;
+}
+table thead tr {
+    color: rgb(53, 51, 51);
+}
+table thead tr th {
+    font-family: "kaorigel.bold";
+}
+table tbody tr {
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 1px solid black;
+}
+table tbody tr td {
+    font-family: "kaorigel.medium";
+}
+table tbody tr td img {
+    width: 30px;
+}
+
+/* ANIM */
+
+table tbody tr:hover {
+    transition: 0.3s;
+    background-color: rgb(255, 255, 255);
 }
