--- a/public/style/admin/contact_details_admin.css
+++ b/public/style/admin/contact_details_admin.css
@@ -8,9 +8,14 @@ h3 {
     font-weight: normal;
 }
 .container_contact {
+    overflow: hidden;
     padding: 5px;
     border: 2px solid black;
     background-color: rgba(255, 255, 255, 0.8);
+}
+.reply {
+    width: 80%;
+    margin: 0 auto;
 }
 .container_message {
     display: flex;
