--- a/public/style/common/common.css
+++ b/public/style/common/common.css
@@ -15,19 +15,19 @@ body {
 }
 @font-face {
     font-family: "electroharmonix";
-    src: url('../fonts/electroharmonix.ttf') format('truetype'); 
+    src: url('../../fonts/electroharmonix.ttf') format('truetype'); 
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
     font-family: "kaorigel.medium";
-    src: url('../fonts/kaorigel.medium.ttf') format('truetype'); 
+    src: url('../../fonts/kaorigel.medium.ttf') format('truetype'); 
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
     font-family: "kaorigel.bold";
-    src: url('../fonts/kaorigel.bold.ttf') format('truetype'); 
+    src: url('../../fonts/kaorigel.bold.ttf') format('truetype'); 
 	font-weight: normal;
 	font-style: normal;
 }
