--- a/public/style/friends.css
+++ b/public/style/friends.css
@@ -23,10 +23,6 @@ h1 {
     width: 60%;
     overflow: hidden;
 }
-#container_slides {
-    width: calc(3*100%);
-    transition: 1s;
-}
 .img_container {
     display: flex;
     flex-direction: column;
@@ -37,7 +33,7 @@ h1 {
     height: 800px;
     background: url('../img/parchment_2.png');
     padding: 10px;
-    width: calc(100% / 3);
+    /* width: calc(100% / 3); */
     float: left;
     box-sizing: border-box;
     display: flex;
