--- a/public/style/admin/articles_management.css
+++ b/public/style/admin/articles_management.css
@@ -1,4 +1,13 @@
+
 #container_title {
     display: flex;
     justify-content: space-between;
+}
+@media screen and (max-width : 500px) {
+    h1 {
+        font-size: 20px;
+    }
+    #container_title a {
+        font-size: 12px;
+    }
 }
