--- a/public/style/admin/connection_admin.css
+++ b/public/style/admin/connection_admin.css
@@ -5,6 +5,7 @@
 h1 {
     font-size: 40px;
     text-align: center;
+    padding: 10px 0;
 }
 #container_connection {
     width: 100%;
@@ -15,6 +16,7 @@ h1 {
     justify-content: center;
 }
 #container_form {
+    box-sizing: border-box;
     background-color: rgb(46, 46, 46);
     padding: 20px 10px;
     display: flex;
@@ -24,12 +26,14 @@ h1 {
 }
 #container_connection form {
     width: 100%;
-    height: 40vh;
     flex-direction: column;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: rgb(46, 46, 46);
+}
+table {
+    padding: 20px 0;
 }
 tr {
     height: 50px;
@@ -80,4 +84,30 @@ input[type="submit"]:hover {
     width: 50%;
     animation: spawn 0.7s;
     position: absolute;
+}
+
+@media screen and (max-width : 500px) {
+    h1 {
+        font-size: 20px;
+    }
+    input:not(#sub_button) {
+        font-size: 12px;
+    }
+    #container_form {
+        width: 95%;
+    }
+    table {
+        width: 100%;
+    }
+    #container_connection form label {
+        margin: 0;
+        font-size: 13px;
+        display: flex;
+        justify-content: center;
+    }
+    input[type="submit"] {
+        font-size: 14px;
+        padding: 15px 0;
+    }
+
 }
