--- a/public/style/article.css
+++ b/public/style/article.css
@@ -1,3 +1,4 @@
+
 .container_background {
     background: url('../img/background.png');
     background-repeat: no-repeat;
@@ -14,6 +15,9 @@
     align-items: center;
     background: url('../img/parchment_2.png');
     box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.6);
+}
+.container_article img {
+    width: 80%;
 }
 .container_miniature {
     display: flex;
@@ -55,4 +59,22 @@
 .container_like img {
     width: 40px;
     height: 40px;
+}
+
+/* RESPONSIVE DESIGN */
+
+
+@media screen and (max-width : 500px) {
+
+    .container_article {
+        font-size: 12px;
+    }
+    .container_like img {
+        width: 30px;
+        height: 30px;
+    }
+    .container_like p {
+        font-size: 30px;
+    }
+
 }
