--- a/public/style/comments.css
+++ b/public/style/comments.css
@@ -41,6 +41,7 @@
     background-color: #e2d3b5;
     margin: 10px 0;
     width: 100%;
+    padding: 5px;
 }
 
 .container_input input[type="submit"] {
@@ -126,4 +127,40 @@
     background-color: #070707 !important;
     color: black !important;
     border: 2px solid black;
+}
+
+/* RESPONSIVE DESIGN */
+
+
+@media screen and (max-width : 500px) {
+
+    .container_input .input_area {
+        font-size: 13px;
+    }
+
+    .container_input input[type="submit"] {
+        font-size: 15px;
+    }
+    .container_data_user span {
+        font-size: 12px;
+    }
+    .container_data_user img {
+        width: 70px;
+    }
+    .comment_temp .avatar {
+        width: 70px;
+    }
+    .comments_user_infos strong {
+        font-size: 12px;
+    }
+    .container_comment_content p {
+        font-size: 12px;
+    }
+    .container_date {
+        font-size: 10px;
+    }
+    .container_links a {
+        font-size: 12px;
+    }
+
 }
