--- a/public/style/common/nav.css
+++ b/public/style/common/nav.css
@@ -6,7 +6,8 @@ header {
 }
 #icon_connection {
     position: absolute;
-    right : 0;
+    right : 1%;
+    top: 1%;
     opacity : 0.7;
 
 }
@@ -15,16 +16,18 @@ header {
     transition: 0.8s;
 }
 #icon_connection {
-    width: 90px;
-    height: 90px;
+    width: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #icon_connection img {
-      width: 100%;
-    height: 100%;
+      width: 120%;
+      height: 120%;
 }
 .connected_icon {
     border: 2px solid black;
-    border-radius: 100px;
+    border-radius: 150px;
     overflow: hidden;
 }
 .connected_icon img {
@@ -47,10 +50,12 @@ nav .ul {
     display: flex;
     justify-content: space-around;
     padding: 15px 0;
+    width: 100%;
 }
 nav .ul a {
     text-decoration: none;
     color: black;
+
 }
 nav .ul a div {
     list-style: none;
@@ -96,6 +101,8 @@ nav .ul a:hover {
       overflow: hidden;
       padding: 0;
       background-color:#124a8e ;
+      position: absolute;
+      z-index: 1000;
       
     }
     nav .ul >* {
@@ -134,14 +141,16 @@ nav .ul a:hover {
         width: 40px;
         height: 40px;
     } 
+    #icon_connection {
+        width: 10%;
+    }
 }
 @media screen and (max-width : 450px) {
     header #img_header {
         height: 130px;
     }
-    #icon_connection img{
-        width: 60px;
-        height: 60px;
+    #icon_connection {
+        width: 15%;
     }
     #button_resp {
         font-size: 40px;
