--- a/public/style/friends.css
+++ b/public/style/friends.css
@@ -18,8 +18,9 @@ h1 {
     padding: 30px 0;
 }
 #screen {
+    box-sizing: border-box;
     cursor: pointer;
-    outline: 2px solid black;
+    border: 2px solid black;
     width: 60%;
     overflow: hidden;
 }
@@ -33,7 +34,6 @@ h1 {
     height: 800px;
     background: url('../img/parchment_2.png');
     padding: 10px;
-    /* width: calc(100% / 3); */
     float: left;
     box-sizing: border-box;
     display: flex;
@@ -59,7 +59,6 @@ h1 {
     flex: 2 1 auto;
 }
 .page_slide {
-    position: relative;
     text-align: end;
     font-size: 30px;
     font-family: "kaorigel.medium";
@@ -82,18 +81,18 @@ h1 {
 
     }
     .slide img {
-        width: 90%;
+        width: 50%;
     }
 }
 @media screen and (max-width : 500px) {
     h1 {
-        font-size: 35px;
+        font-size: 30px;
     }
     section {
         padding: 0;
     }
     #screen {
-        width: 100%;
+        width: 96%;
         margin-bottom: 30px;
     }
 }
